--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,21 @@
 <header role="banner">
-      <!--<h1 class="logo">{{ site.title }}</h1>-->
-      <nav role="navigation">
-<ul>
-   {% for item in site.data.navigation.links %}
-      <li><a href="{{ item.url }}" {% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a></li>
-   {% endfor %}
-</ul>
-</nav>
+	<!--<h1 class="logo">{{ site.title }}</h1>-->
+	<nav role="navigation">
+		<ul>
+		{% for item in site.data.navigation.links %}
+			<li>
+				<a href="{{ item.url }}" {% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a>
+			</li>
+		{% endfor %}
+		</ul>
+
+		<ul class="social">
+			<li>
+				<a href="https://medium.com/@{{ site.medium.username }}">Medium</a>
+			</li>
+			<li>
+				<a href="https://twitter.com/{{ site.twitter.username }}">Twitter</a>
+			</li>
+		</ul>
+	</nav>
 </header>
