--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,13 +10,17 @@ body {
 	font-family: system-ui, sans-serif;
 	-webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
-	line-height:1.5;
+	line-height: 1.5;
 	font-size: 1rem;
 	color: rgb(22, 23, 26);
 }
 
 nav ul {
     border-right: 1px solid #edf2f7;
+}
+
+nav ul.social {
+	margin-top: 40px
 }
 
 a {
@@ -167,25 +171,24 @@ main {
 
 
 @media screen and (max-width: 45rem ) {
-header li {
-    display: inline;
-	margin-right: 1rem;
-}
-.logo {
-	padding-bottom: 1rem;
-}
-header ul {
-	border-bottom: 1px solid #edf2f7;
-	padding-bottom: 2rem;	
-}
-nav ul {
-    border-right: 0px;
-}
+	header li {
+	    display: inline;
+		margin-right: 1rem;
+	}
+	.logo {
+		padding-bottom: 1rem;
+	}
+	header ul {
+		border-bottom: 1px solid #edf2f7;
+		padding-bottom: 2rem;	
+	}
+	nav ul {
+	    border-right: 0px;
+	}
 
-.photos ul {
-	margin-top: 0.5rem;
-}
-
+	.photos ul {
+		margin-top: 0.5rem;
+	}
 }
 
 section {
