--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,10 +7,7 @@
 				<a href="{{ item.url }}" {% if item.url == page.url %} class="active"{% endif %}>{{ item.title }}</a>
 			</li>
 		{% endfor %}
-		</ul>
-
-		<ul class="social">
-			<li>
+			<li class="separate">
 				<a href="https://medium.com/@{{ site.medium.username }}">Medium</a>
 			</li>
 			<li>
