--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,27 @@ layout: compress
 <html lang="en" >
   {% include head.html %}  
   <body>
+	<a id="block" href="/"></a>
     <main role="main">
       {% include navigation.html %}
       {{ content }}
     </main>
+
+
+
+	<footer>
+		<div class="ml"></div>
+		<div class="footer">
+			<ul>
+				<li>jnthn.dev /</li>
+				<li>
+					<a href="https://medium.com/@jonathonscanes">medium</a>
+				</li>
+				<li>
+					<a href="https://github.com/djjonno">github</a>
+				</li>
+			</ul>
+		</div>
+    </footer>
   </body>
 </html>
