--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -15,10 +15,6 @@ body {
 	color: rgb(22, 23, 26);
 }
 
-nav ul {
-    border-right: 1px solid #edf2f7;
-}
-
 nav ul li.separate {
 	margin-top: 30px;
 }
@@ -27,6 +23,11 @@ a {
     color: #000;
     text-decoration-skip-ink: auto;
     text-decoration: underline;
+	border-bottom: 2px solid white;
+}
+
+a:hover {
+	border-bottom: 2px solid black;
 }
 
 pre {
@@ -36,6 +37,10 @@ pre {
 
 .post p {
 	margin: .5rem 0;
+}
+
+.post a:hover {
+	border-bottom: none;	
 }
 
 .post h1, .post h2, .post h3, .post h4 {
@@ -48,6 +53,10 @@ pre {
 
 .meta {
 	margin: 2rem 0;
+	color: #AAA;
+}
+.meta a {
+	color: #AAA;
 }
 
 code,pre {
@@ -78,9 +87,9 @@ hr {
 }
 
 header {
-	flex-basis:10rem;
-	flex-grow:1;
-	position:relative;
+	flex-basis: 10rem;
+	flex-grow: 1;
+	position: relative;
 }
 
 header a {
@@ -133,40 +142,61 @@ strong, b {
 	margin-bottom: 0.5rem;
 }
 
-.posts ul,header ul {
+.main-section ul,header ul {
 	list-style:none;
 }
 
-.posts li {
+.main-section li {
 	align-items:center;
 	display:flex;
 	justify-content:space-between;
 	margin-bottom: .5rem;
 }
 
-.posts li a, .posts li div, .projects li a {
-	white-space:nowrap;
-	overflow:hidden;
-	text-overflow:ellipsis;
+.main-section li a, .main-section li div, .projects li a {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	text-decoration: none;
+	font-weight: bold;
 }
 
-.posts li time, .projects li time {
+.main-section li time, .projects li time {
 	padding-left: 1rem;
 	white-space: nowrap;
 	font-variant-numeric: tabular-nums;
+	color: #AAA;
+	font-size: 0.9em;
 }
 
-.post ul, .project ul, .post ol  {
-	//list-style-position: inside;
+.main-section .projects {
+	margin-top: 3rem;
+}
+
+ul.project-list li {
+	display: block;
+	margin-bottom: 1.5rem;
+}
+
+ul.project-list li summary a {
+	border-bottom: 1px solid black;
+	font-weight: normal;
+}
+
+ul.project-list li a.title {
+	font-weight: bold;
+}
+
+ul.project-list li summary {
+	font-size: 0.9rem;
+	margin-top: 0.25rem;
 }
 
 main {
-	display:flex;
-	flex-wrap:wrap;
-	max-width:60rem;
-	margin:2rem auto;
-	padding:1rem;
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 60rem;
+	padding: 1rem;
 }
 
 
@@ -195,14 +225,58 @@ main {
 }
 
 section {
-	flex-basis:0;
-	flex-grow:999;
-	min-width:70%;
-	display:flex;
-	flex-direction:column;
-	
+	flex-basis: 0;
+	flex-grow: 999;
+	min-width: 70%;
+	display: flex;
+	flex-direction: column;
 }
 
 figcaption {
     font-size: smaller;
+}
+
+a#block {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	top: 0;
+	left: 0;
+	background-color: #0000FF;
+}
+
+footer {
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 60rem;
+	padding: 1rem;
+}
+
+div.ml {
+	flex-basis: 10rem;
+	flex-grow: 1;
+	position: relative;
+}
+
+div.footer {
+	flex-basis: 0;
+	flex-grow: 999;
+	min-width: 70%;
+	display: flex;
+	flex-direction: column;
+	padding: 1rem;
+	font-size: 0.7rem;
+	color: #AAA;
+}
+
+div.footer ul li {
+	display: inline-block;
+	margin-right: 1rem;
+}
+div.footer ul li a {
+	color: #AAA;
+}
+div.footer ul li a:hover {
+	border: none;
+	color: black;
 }
